--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
       - name: Run ros_webdata
         run: |
-          pip install --forece-reinstall requests
+          pip install --force-reinstall requests
           python3 -m ros_webdata.main 
           ls ./
       - run: echo "🍏 This job's status is ${{ job.status }}."
