--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: Run program to update data
 run-name: ${{ github.actor }} is running ros_webdata
-on: [push]
+on: [push, workflow_dispatch]
 jobs:
   Run_ros_webdata:
     runs-on: ubuntu-22.04
