WIP for package_downloads

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,15 @@ jobs:
           echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
           echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
           echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
+      - name: Checkout repository code
         uses: actions/checkout@v4
+      - name: Checkout data branch
+        uses: actions/checkout@v4
+        with:
+          ref: build
+          clean: false
+      - name: Check branch download
+        run: ls ./
       - name: Run ros_webdata
         run: |
           pip install --force-reinstall requests
