--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,9 +46,15 @@ jobs:
       #    MESSAGE: "Build: ({sha}) {msg}" # The commit message
   # Deployment job
   deploy:
+    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+  
     runs-on: ubuntu-latest
     needs: build
     steps:
