--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,12 @@ jobs:
         run: |
           pip install requests beautifulsoup4
           python3 -m ros_webdata.main 
-          ls ./
+
+      - name: Generate Directory Listings
+        uses: jayanta525/github-pages-directory-listing@v4.0.0
+        with:
+          FOLDER: outdir      #directory to generate index
+
       - name: Upload static files as artifact
         id: deployment
         uses: actions/upload-pages-artifact@v3
